Java version fixes